# phonique

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: rust.yml
src/: fonts.rs  icons.rs  main.rs  menu_bar.rs  player.rs  util.rs
src/app_state/: mod.rs  state_impl.rs
src/audio_scanner/: mod.rs
src/discogs/: error.rs  filters.txt  mod.rs  models.rs  playlist.rs  ui.rs
src/discogs/crawler/: bandcamp.rs  beatport.rs  mod.rs  parser.rs  util.rs
src/screen/: login_screen.rs  main_screen.rs  mod.rs
src/sidebar/: mod.rs  playlists.rs  tags.rs
src/storage/: local.rs  mod.rs  schema.sql
src/theme/: button.rs  container.rs  mod.rs
src/view_types/: browse.rs  compact_view.rs  mod.rs
src/widgets/: button_with_menu.rs  column.rs  compact_row.rs  container.rs  context_menu.rs  mod.rs
wix/: main.wxs
